--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas
-numpy 
-matplotlib
-seaborn 
-scikit-learn
-streamlit
-plotly
+streamlit==1.32.2
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.4.2
+plotly==5.19.0
+matplotlib==3.8.4
+seaborn==0.13.2
+altair==4.2.2
